GH-360 Move xsd file in other subfolder and implement TimeframedPermissionRequest for every PermissionRequest